--- a/app/views/appointments/show.html.erb
+++ b/app/views/appointments/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Time:</strong>
   <%= @appointment.time %>
+  <%= @appointment.slot %>
 </p>
 
 <%= link_to 'Edit', edit_appointment_path(@appointment) %> |
