--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -12,6 +12,7 @@
 <br>
 
 
+
 <%= will_paginate %>
 
 <%= content_tag :table, class: 'table' do %>
@@ -22,3 +23,8 @@
 <%= will_paginate %>
 
 <%= link_to 'New History', new_history_path %>
+
+
+<script>
+
+</script>
