--- a/app/views/suits/edit.html.erb
+++ b/app/views/suits/edit.html.erb
@@ -3,5 +3,8 @@
 
 <%= render 'form', suits: @suit %>
 
-<%= link_to 'Back to inventory', suits_path %>
+<center>
+    <%= link_to 'Back to Inventory', suits_path, {:class => "btn btn-default"}%>
+</center>
+
 
