--- a/app/views/suits/new.html.erb
+++ b/app/views/suits/new.html.erb
@@ -3,4 +3,6 @@
 
 <%= render 'form', suits: @suit %>
 
-<%= link_to 'Back to Inventory', suits_path %>
+<center>
+    <%= link_to 'Back to Inventory', suits_path, {:class => "btn btn-default"}%>
+</center>
