--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -75,6 +75,12 @@ footer {
   padding-top: 5px;
   border-top: 1px solid #eaeaea;
   color: #777;
+  position: relative;
+  left: 0;
+  bottom: 0;
+  height: 50px;
+  width: 97%;
+  overflow: hidden;
 }
 
 footer a {
