--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,7 +1,9 @@
 
-<h1>New Appointment</h1>
-<%= link_to 'Back', appointments_path %>
-<%= render 'form' %>
 
+<%= render 'form' %><br>
 
-
+<center>
+     <%= link_to 'Back', appointments_path, {:class => "btn btn-default"} %>
+</center>
+    
+ 
