--- a/app/views/renters/new.html.erb
+++ b/app/views/renters/new.html.erb
@@ -1,37 +1,7 @@
-<h1>Renters#new</h1>
-<p>Find me in app/views/renters/new.html.erb</p>
+<h1>Add a new rental record</h1>
 
+<%= render 'form', renters: @renter %>
 
-<% if @renter.errors.any? %>
-<h2>"The following errors prevented the article from getting created"</h2>
-<ul>
-    <% @renter.errors.full_messages.each do |msg| %>
-    <li><%= msg %></li>
-    <% end %>
-</ul>
-<% end %>
-
-<% if @renter.suit_id.blank? %>
-  <% suit_id = params[:suit_id] %>
-<% else %>
-  <% suit_id = renters.suit_id %>
-<% end %>
-
-<%= form_for @renter do |f| %>
-    <%= f.label :suit_id, "App. ID" %>
-    <%= f.collection_select :suit_id, Suit.all, :id, lambda { |s| "#{s.appid}"}, {:prompt => "Please select a suit"} %>
-    <%= f.label :user_id, "UIN of costumer:" %>
-    <%= f.collection_select :user_id, User.all, :id, lambda { |u| "#{u.uin}"}, {:prompt => "Please select Customer UIN"} %>
-    <%= f.label :checkOutTime, "Check out time:" %>
-    <%= f.date_select :checkOutTime, id: :renter_checkOutTime %>
-    <%= f.label :expectReturnTime, "Expected return time:" %>
-    <%= f.date_select :expectReturnTime, id: :renter_expectReturnTime %>
-    <%= f.hidden_field :status, value: :Checkout %>
-
-<%= f.submit "Make a rent" %><br>
-
-<% end %>
-
-<p>
-    <%= link_to "Back to Rent System", renters_path %>
-</p>
+<center>
+    <%= link_to 'Back to rental system', renters_path, {:class => "btn btn-default"}%>
+</center>
