--- a/app/views/histories/index.html.erb
+++ b/app/views/histories/index.html.erb
@@ -14,13 +14,13 @@
   </div>
 </div><br>
 
+<div>
+  <%= will_paginate %>
+  <%= content_tag :table, class: 'table' do %>
+    <%= content_tag :thead, display_history_sorted_column_headers(@search_history), nil, false  %>
+    <%= content_tag :tbody, display_history_sorted_search_results(@histories), nil, false  %>
+  <% end %>
+  <%= will_paginate %>
+</div>
 
-<%= will_paginate %>
-
-<%= content_tag :table, class: 'table' do %>
-  <%= content_tag :thead, display_history_sorted_column_headers(@search_history), nil, false  %>
-  <%= content_tag :tbody, display_history_sorted_search_results(@histories), nil, false  %>
-<% end %>
-
-<%= will_paginate %>
 
