--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -25,7 +25,7 @@
       <%= f.password_field :password, class: 'form-control'  %>
 
       <%= f.label :password_confirmation, "Password Confirmation" %>
-      <%= f.password_field :password_confirmation, class: 'form-control'  %>
+      <%= f.password_field :password_confirmation, class: 'form-control'  %><br>
 
       <%= f.submit "Create my account", class: "btn btn-primary" %>
     <% end %>
