--- a/app/views/renters/index.html.erb
+++ b/app/views/renters/index.html.erb
@@ -27,3 +27,36 @@
 
 <%= will_paginate %>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+</head>
+<body>
+
+<script>
+$(document).ready(function(){
+    
+    $(".table").bind('change keyup', function(){ 
+     var tr = $(this).closest('td');
+     console.log(tr);
+     if ($(this).val() <= -1 ) tr.addClass('delay');
+     else tr.removeClass('delay');
+    }).trigger('change');
+
+    
+});
+</script>
+ 
+<style>
+.table .delay {
+  color: yellow;
+}
+
+</style>
+ 
+</body>
+</html>
